--- a/BenPorathContTimeLH-lyxformat-474.lyx
+++ b/BenPorathContTimeLH-lyxformat-474.lyx
@@ -1,9 +1,7 @@
-#LyX 2.2 created this file. For more info see http://www.lyx.org/
-\lyxformat 508
+#LyX 2.1 created this file. For more info see http://www.lyx.org/
+\lyxformat 474
 \begin_document
 \begin_header
-\save_transient_properties true
-\origin unavailable
 \textclass article
 \begin_preamble
 \newcommand{\oTech}{F}
@@ -16,16 +14,16 @@
 \language_package default
 \inputencoding auto
 \fontencoding global
-\font_roman "default" "default"
-\font_sans "default" "default"
-\font_typewriter "default" "default"
-\font_math "auto" "auto"
+\font_roman default
+\font_sans default
+\font_typewriter default
+\font_math auto
 \font_default_family default
 \use_non_tex_fonts false
 \font_sc false
 \font_osf false
-\font_sf_scale 100 100
-\font_tt_scale 100 100
+\font_sf_scale 100
+\font_tt_scale 100
 \graphics default
 \default_output_format default
 \output_sync 0
@@ -151,7 +149,7 @@ Notation
 \begin_layout Standard
 \begin_inset Formula 
 \begin{equation}
-m\left(t\right)=1-\exp\left(-\left(r+\delta_{h}\right)t\right)
+m\left(t\right)=1-\exp\left(\left(r+\delta_{h}\right)t\right)
 \end{equation}
 
 \end_inset
